# ventilator-pressure-prediction

./: .gitignore  LICENSE  README.md  custom_solution.ipynb  eda.ipynb  lama.ipynb  pyproject.toml
