[project]
name = "ventilator-pressure-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasia Kalimanova",email = "nkaliman00@mail.ru"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
